[package]
name = "tradeBot"
version = "0.1.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
