[package]
name = "TavernBot"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.58.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
dashmap = { version = "4.0.2" }
serenity = { version = "0.10.0", features = ["framework", "standard_framework", "rustls_backend", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0" }
serde_json = { version = "1.0.68" }
